2012-09-26:
 - Compatibility with IDEA 12.0
 - 1.1beta9

2012-03-23:
 - Compatibility with IDEA 11.1
 - 1.1beta8

2012-02-16:
 - Fixed the possible cause of the unbalanced markers
 - 1.1beta7

2012-02-09:
 - 1.1beta6

2012-02-02:
 - Possible fix for exception "StringIndexOutOfBoundsException"

2012-01-26:
 - Less inspection warnings

2012-01-25:
 - Hopefully fixed "marker not closed" exception
 - Better error messages for empty loop bodies

2012-01-21:
 - Lexer fixes
 - Parser fixes
 - Fixed exception in BashSearchScopes.moduleSearchScope
 - Improved here-doc parsing
 - Fixed parsing of string and subexpressions in arithmetic expressions
 - Fixed parsing of [ ] conditional expression
 - Enabled debug mode for beta releases
 - 1.1beta5

2012-01-18:
 - Parser fix for "unset todo_list[$todo_id]"

2012-01-14:
 - Parser fixes for nested strings
 - Improved support for substitution operators in parameter expansion, e.g. ${var:-value if var is null}
 - The bash library bashinator now parses without syntax errors

2012-01-12:
 - Parsing performance improved
 - Indexing of variable definitions, function definitions, script includes, reverse script includes and file names

2012-01-07:
 - Fixed parsing of ${@} and ${?}
 - Fixed unevaluated strings in a subshell
 - Error message for postfix / prefix operators on variable values in arithmetic expressions, e.g. $(( ${x}++ ))
 - Version 1.1beta3

2012-01-06:
 - Basic support for regular expressions in conditional command, e.g. [[ a =~ e* ]]
 - Fixed negation in conditional expressions, e.g. [ ! -f "test.txt" ]

2012-01-05:
 - Redirects after include command are supported now

2011-11-29:
 - Version 1.1beta2

2011-11-12:
 - Parser fixes

2011-11-10:
 - Fixed parsing of the semicolon in "case ... esac;"
 - Fixed hidden files in absolute path completion
 - Version 1.1beta1

2011-11-09:
 - Fixed parsing of conditional commands [[ x ]] and test expressions [ x ]
 - Compatibility with IntelliJ 11 EAP

2011-08-12: