@@ -1,3 +1,11 @@
+2012-11-21:
+ - Fixed testcases to work with IntelliJ IDEA 123.4
+ - Added parsing of history expansions
+ - Fixed parsing of single ! tokens
+
+2012-11-18:
+ - Fix to allow umlaut characters in command names and arguments.
+
 2012-09-26:
  - Compatibility with IDEA 12.0
  - 1.1beta9
